...
        log.i { "暂停" }
    }

    override fun release() {
        _isPlaying = false
        _prepared = false
        log.i { "释放" }
    }

    override fun setMuted(muted: Boolean) {
        _muted = muted
    }

...
